--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "observable preview",
     "deploy": "observable deploy",
     "observable": "observable",
-    "fake": "node src/fake/generate-fake-story-cycle-time.js"
+    "generate-fake": "node src/fake/generate-fake-story-cycle-time.js",
+    "generate": "node src/fake/generate-story-cycle-time-from-csv.js"
   },
   "dependencies": {
     "@observablehq/framework": "^1.12.0",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
+    "csv-parser": "^3.0.0",
     "rimraf": "^5.0.5"
   },
   "engines": {
