--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "observable preview",
     "deploy": "observable deploy",
     "observable": "observable",
-    "generate-fake": "node src/fake/generate-fake-story-cycle-time.js",
-    "generate": "node src/fake/generate-story-cycle-time-from-csv.js"
+    "fmt": "prettier --write \"src/**/*.+(js|json)\""
   },
   "dependencies": {
     "@observablehq/framework": "^1.12.0",
@@ -19,6 +18,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
     "csv-parser": "^3.0.0",
+    "prettier": "3.3.3",
     "rimraf": "^5.0.5"
   },
   "engines": {
